--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <HTML>
 <HEAD> <TITLE> Visual memory for causal and coincidental events</TITLE> </HEAD>
 <BODY>
-<a href='https://youtube.com/playlist?list=PLWM7Vd_aIzILhwfrWYAMkPYnHUdrDqmTt'> Causal videos </a>
-<a href='https://youtube.com/playlist?list=PLWM7Vd_aIzIJ-9lJGP7PrRt9pIvb_fxwn'> Coincidental videos </a>
-<a href='https://youtube.com/playlist?list=PLWM7Vd_aIzIJWgZXsb0oY9UCQUWA5bQtv'> Time-delayed Causal videos </a>
+<a href='https://youtube.com/playlist?list=PLWM7Vd_aIzILhwfrWYAMkPYnHUdrDqmTt'> Causal videos </a> <br>
+<a href='https://youtube.com/playlist?list=PLWM7Vd_aIzIJ-9lJGP7PrRt9pIvb_fxwn'> Coincidental videos </a> <br>
+<a href='https://youtube.com/playlist?list=PLWM7Vd_aIzIJWgZXsb0oY9UCQUWA5bQtv'> Time-delayed Causal videos </a> <br>
 </BODY>
 
 </HTML>
